@@ -26,6 +26,7 @@ import org.apache.kafka.common.header.internals.RecordHeaders;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -38,6 +39,9 @@ import java.util.stream.StreamSupport;
  * @param <TKey>   Event key type
  * @param <TValue> Event value type
  */
+// java:S6213 - method name is published API; renaming would break consumers
+// java:S119 - TKey/TValue/TRequest generic naming convention is used across the codebase
+@SuppressWarnings({"java:S6213", "java:S119"})
 public class KafkaEvent<TKey, TValue> implements Event<TKey, TValue> {
 
     private final ConsumerRecord<TKey, TValue> record;
@@ -71,7 +75,7 @@ public class KafkaEvent<TKey, TValue> implements Event<TKey, TValue> {
 
     @Override
     public String lastHeader(String key) {
-        List<String> values = this.headers(key).collect(Collectors.toList());
+        List<String> values = this.headers(key).toList();
         return CollectionUtils.isEmpty(values) ? null : values.getLast();
     }
 
@@ -177,5 +181,12 @@ public class KafkaEvent<TKey, TValue> implements Event<TKey, TValue> {
             return false;
         }
         return Objects.equals(this.value(), other.value());
+    }
+
+    @Override
+    public int hashCode() {
+        // Must stay consistent with equals(), which compares against the Event interface and so can consider two
+        // different Event implementations equal.  Both implementations therefore hash the same three components.
+        return Objects.hash(new HashSet<>(this.headers().toList()), this.key(), this.value());
     }
 }
