@@ -23,7 +23,6 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.SetUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -33,6 +32,8 @@ import java.util.stream.Stream;
  * @param <TValue> Event value type
  */
 @ToString
+// java:S119 - TKey/TValue/TRequest generic naming convention is used across the codebase
+@SuppressWarnings("java:S119")
 public class SimpleEvent<TKey, TValue> implements Event<TKey, TValue> {
 
     private final List<EventHeader> headers;
@@ -87,7 +88,7 @@ public class SimpleEvent<TKey, TValue> implements Event<TKey, TValue> {
 
     @Override
     public String lastHeader(String key) {
-        List<String> values = this.headers(key).collect(Collectors.toList());
+        List<String> values = this.headers(key).toList();
         return CollectionUtils.isEmpty(values) ? null : values.getLast();
     }
 
@@ -159,10 +160,13 @@ public class SimpleEvent<TKey, TValue> implements Event<TKey, TValue> {
         if (!Objects.equals(this.key, other.key())) {
             return false;
         }
-        if (!Objects.equals(this.value, other.value())) {
-            return false;
-        }
+        return Objects.equals(this.value, other.value());
+    }
 
-        return true;
+    @Override
+    public int hashCode() {
+        // Must stay consistent with equals(), which compares against the Event interface and so can consider two
+        // different Event implementations equal.  Both implementations therefore hash the same three components.
+        return Objects.hash(new HashSet<>(this.headers().toList()), this.key(), this.value());
     }
 }
